--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://username:password@abc.mongodb.net/test?authSource=admin&replicaSet=atlas-iywr24-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass&retryWrites=true&ssl=true
+MONGODB_URI=mongodb+srv://vinh:1234@vin.kbxil.mongodb.net/test?authSource=admin&replicaSet=atlas-iywr24-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass&retryWrites=true&ssl=true
